@@ -16,6 +16,7 @@ from pytype import utils
 from pytype.pytd import optimize
 from pytype.pytd import pytd
 from pytype.pytd import pytd_utils
+from pytype.pytd import slots
 from pytype.pytd import visitors
 import six
 
@@ -576,7 +577,11 @@ class ErrorLog(ErrorLogBase):
                keyword=attr_name)
 
   def attribute_error(self, stack, binding, attr_name):
-    if isinstance(binding.data, abstract.Module):
+    if attr_name in slots.SYMBOL_MAPPING:
+      obj = self._print_as_actual_type(binding.data)
+      details = "No %s.%s" % (obj, attr_name)
+      self._unsupported_operands(stack, attr_name, obj, details=details)
+    elif isinstance(binding.data, abstract.Module):
       self._module_attr(stack, binding, attr_name)
     else:
       self._attribute_error(stack, binding, attr_name)
@@ -640,8 +645,24 @@ class ErrorLog(ErrorLogBase):
         len(bad_call.passed_args))
     self._invalid_parameters(stack, message, bad_call)
 
-  @_error_name("wrong-arg-types")
   def wrong_arg_types(self, stack, name, bad_call):
+    """Log [wrong-arg-types]."""
+    maybe_left_operand, _, f = name.rpartition(".")
+    if maybe_left_operand and f in slots.SYMBOL_MAPPING:
+      unused_self, right_operand_name_and_value = bad_call.passed_args
+      _, right_operand = right_operand_name_and_value
+      expected_right_operand = self._print_as_expected_type(
+          bad_call.bad_param.expected)
+      details = "%s.%s expected %s" % (
+          maybe_left_operand, f, expected_right_operand)
+      self._unsupported_operands(
+          stack, f, maybe_left_operand,
+          self._print_as_actual_type(right_operand), details=details)
+    else:
+      self._wrong_arg_types(stack, name, bad_call)
+
+  @_error_name("wrong-arg-types")
+  def _wrong_arg_types(self, stack, name, bad_call):
     """A function was called with the wrong parameter types."""
     message = ("%s was called with the wrong arguments" %
                _function_name(name, capitalize=True))
@@ -746,15 +767,25 @@ class ErrorLog(ErrorLogBase):
     ])
     self.error(stack, "Invalid instantiation of generic class", details)
 
-  @_error_name("unsupported-operands")
   def unsupported_operands(self, stack, operation, var1, var2):
     left = self._join_printed_types(
         self._print_as_actual_type(t) for t in var1.data)
     right = self._join_printed_types(
         self._print_as_actual_type(t) for t in var2.data)
-    # TODO(kramm): Display things like '__add__' as '+'
-    self.error(stack, "unsupported operand type(s) for %s: %r and %r" % (
-        operation, left, right))
+    details = "No %s.%s" % (left, operation)
+    if operation in slots.REVERSE_NAME_MAPPING:
+      details += " or %s.%s" % (right, slots.REVERSE_NAME_MAPPING[operation])
+    self._unsupported_operands(stack, operation, left, right, details=details)
+
+  @_error_name("unsupported-operands")
+  def _unsupported_operands(self, stack, operation, *operands, **details):
+    # TODO(b/114124544): Change the signature to (..., *operands, details=None)
+    assert set(details) <= {"details"}
+    # TODO(rechen): Specify a symbol for every operation.
+    self.error(stack, "unsupported operand type(s) for %s: %s" % (
+        slots.SYMBOL_MAPPING.get(operation, operation),
+        " and ".join(repr(operand) for operand in operands)),
+               details=details.get("details"))
 
   def invalid_annotation(self, stack, annot, details=None, name=None):
     if annot is not None:
